tests/negative/typecheck/try_sum_not_error.orng
// try_sum_not_error.orng:6:11: error: expected error type for try, got `(ok: Int | err: Char)`
//     try f()
//          ^
// 
fn main() -> Int {
    try f()
}

fn f() -> (ok: Int | err: Char) {
    return .err('d')
}